--- a/wasty/wasty/wasty.csproj
+++ b/wasty/wasty/wasty.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <ApplicationIcon>wasty-icon-128.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
